# weathertools

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  MEMOIR.md  README-gps.md  README-tdx.md  README.md  pyproject.toml  weather.py  weather_gps.py  weather_tdx.py  weather_vision.py
tests/: weather.py  weather_analyzer.py
